2008-12-05  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_clear_private_connection_values): new function to clear
			applet private values from a connection

	* src/connection-editor/page-wired-security.c
		- (ce_page_wired_security_new): ensure setting gets updated when
			security is changed
		- (validate): copy applet private values to the real connection when
			using 802.1x security; clear applet private values when there's no
			security

	* src/connection-editor/page-wireless-security.c
		- (validate): clear applet private values when there's no security

2008-11-26  Dan Williams  <dcbw@redhat.com>

	* Release 0.7

2008-11-26  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- (nma_gconf_connection_class_init): update for delete -> do_delete

2008-11-25  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- (nma_gconf_connection_changed): fill connection certs before functions
			that verify them, since pkcs#12 needs special client cert/private key
			handling; don't leak a connection hash

	* src/utils/utils.c
		- (utils_fill_connection_certs): handle pkcs#12 private keys and set
			client cert at the same time

2008-11-24  Dan Williams  <dcbw@redhat.com>

	Patch from Tony Houghton <h@realh.co.uk>  (bgo #455250)

	* src/applet.c
	  src/applet.h
		- (applet_do_notify_with_pref): add notification helper for connect/
			disconnect messages with a "disable me" button
		- (foo_client_state_changed_cb): add ability to disable disconnected
			notification too
		- (applet_do_notify): set default timeout for notifications

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-wired.c
		- Use applet_do_notify_connect_state()

2008-11-21  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.c
		- (ip4_address_as_string): use inet_ntop() instead of inet_ntoa()
